[gd_scene load_steps=3 format=2]

[ext_resource path="res://PlayScreen.gd" type="Script" id=1]
[ext_resource path="res://ScriptDisplay.tscn" type="PackedScene" id=2]

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0.0627451, 0.12549, 1 )
script = ExtResource( 1 )

[node name="Layout" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -300

[node name="VBC" type="VBoxContainer" parent="Layout"]
margin_right = 377.0
margin_bottom = 736.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spoolbook_Label" type="Label" parent="Layout/VBC"]
margin_right = 377.0
margin_bottom = 14.0
text = "Spoolbook"

[node name="Spoolbook" type="Tree" parent="Layout/VBC"]
margin_top = 18.0
margin_right = 377.0
margin_bottom = 250.0
size_flags_vertical = 3
columns = 2
hide_root = true
select_mode = 1

[node name="Historybook_Label" type="Label" parent="Layout/VBC"]
margin_top = 254.0
margin_right = 377.0
margin_bottom = 268.0
text = "Historybook"

[node name="Historybook" type="ItemList" parent="Layout/VBC"]
margin_top = 272.0
margin_right = 377.0
margin_bottom = 736.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="L2" type="HSplitContainer" parent="Layout"]
margin_left = 389.0
margin_right = 1366.0
margin_bottom = 736.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 80

[node name="ColorRect" type="ColorRect" parent="Layout/L2"]
margin_right = 562.0
margin_bottom = 736.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0.14902, 1 )

[node name="VBC" type="VBoxContainer" parent="Layout/L2/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
alignment = 1

[node name="Play_Button" type="Button" parent="Layout/L2/ColorRect/VBC"]
margin_right = 41.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Start"

[node name="EncounterTitle" type="Label" parent="Layout/L2/ColorRect/VBC"]
margin_top = 24.0
margin_right = 562.0
margin_bottom = 38.0

[node name="MainText" type="RichTextLabel" parent="Layout/L2/ColorRect/VBC"]
margin_top = 42.0
margin_right = 562.0
margin_bottom = 502.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true

[node name="ScriptReportButtonsHBC" type="HBoxContainer" parent="Layout/L2/ColorRect/VBC"]
visible = false
margin_top = 490.0
margin_right = 562.0
margin_bottom = 510.0
alignment = 1

[node name="EncounterSelectionReportButton" type="Button" parent="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC"]
margin_left = 112.0
margin_right = 297.0
margin_bottom = 20.0
text = "Encounter Selection Report"

[node name="OptionScriptReportButton" type="Button" parent="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC"]
margin_left = 301.0
margin_right = 450.0
margin_bottom = 20.0
text = "Option Script Reports"

[node name="OptionsList" type="ItemList" parent="Layout/L2/ColorRect/VBC"]
margin_top = 506.0
margin_right = 562.0
margin_bottom = 736.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBC" type="VBoxContainer" parent="Layout/L2"]
margin_left = 574.0
margin_right = 977.0
margin_bottom = 736.0
size_flags_horizontal = 3

[node name="Castbook_Label" type="Label" parent="Layout/L2/VBC"]
margin_right = 403.0
margin_bottom = 14.0
text = "Castbook"

[node name="Castbook" type="Tree" parent="Layout/L2/VBC"]
margin_top = 18.0
margin_right = 403.0
margin_bottom = 736.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Resulting_Reaction" type="Label" parent="Layout/L2/VBC"]
visible = false
margin_top = 22.0
margin_right = 58.0
margin_bottom = 36.0
text = "Results:"
clip_text = true

[node name="Resulting_Encounter" type="Label" parent="Layout/L2/VBC"]
visible = false
margin_top = 22.0
margin_right = 58.0
margin_bottom = 36.0
autowrap = true

[node name="Reaction_Inclinations" parent="Layout/L2/VBC" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 379.0
margin_right = 403.0
margin_bottom = 736.0
columns = 2
select_mode = 1

[node name="EncounterScriptReportWindow" type="AcceptDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 256 )
window_title = "Encounter Selection Report"
resizable = true

[node name="VBC" type="VBoxContainer" parent="EncounterScriptReportWindow"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="EncounterScriptReportWindow/VBC"]
margin_right = 512.0
margin_bottom = 254.0
size_flags_vertical = 3

[node name="ConsequenceReport" type="RichTextLabel" parent="EncounterScriptReportWindow/VBC/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 5
bbcode_enabled = true

[node name="ScriptDisplay" parent="EncounterScriptReportWindow/VBC" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 258.0
margin_right = 512.0
margin_bottom = 512.0
columns = 2
select_mode = 1

[node name="OptionScriptReportWindow" type="AcceptDialog" parent="."]
margin_right = 512.0
margin_bottom = 512.0
window_title = "Option Script Reports"
resizable = true

[node name="ScriptDisplay" parent="OptionScriptReportWindow" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 476.0
columns = 2
select_mode = 1

[connection signal="item_activated" from="Layout/VBC/Historybook" to="." method="_on_Historybook_item_activated"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC/EncounterSelectionReportButton" to="." method="_on_EncounterSelectionReportButton_pressed"]
[connection signal="pressed" from="Layout/L2/ColorRect/VBC/ScriptReportButtonsHBC/OptionScriptReportButton" to="." method="_on_OptionScriptReportButton_pressed"]
[connection signal="item_activated" from="Layout/L2/ColorRect/VBC/OptionsList" to="." method="_on_OptionsList_item_activated"]
[connection signal="item_selected" from="Layout/L2/ColorRect/VBC/OptionsList" to="." method="_on_OptionsList_item_selected"]
